samples/troubleshooting/invalid/R5.dita
<?xml version="1.0" encoding="UTF-8"?>
<troubleshooting>
  <title>T</title>
  <shortdesc>SD</shortdesc>
  <prolog/>
</troubleshooting>